[gd_scene load_steps=2 format=3 uid="uid://duniv667w1xqw"]

[ext_resource type="Script" path="res://UI/game_over.gd" id="1_6enp5"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_6enp5")

[node name="Label" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 899.0
offset_top = 416.0
offset_right = -929.0
offset_bottom = -638.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 922.0
offset_top = 481.0
offset_right = -948.0
offset_bottom = -533.0
grow_horizontal = 2
grow_vertical = 2

[node name="RetryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
